--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,12 +17,14 @@
     "@types/react-dom": "^18.2.4",
     "@types/react-fontawesome": "^1.6.5",
     "@types/react-leaflet-markercluster": "^3.0.4",
-    "axios": "^1.6.1",
-    "joi": "^17.11.0",
     "@types/react-router-hash-link": "^2.4.9",
+    "axios": "^1.6.1",
+    "i": "^0.3.7",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
     "leaflet-geosearch": "^3.11.0",
+    "npm": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.4",
