--- a/backend/package.json
+++ b/backend/package.json
@@ -1,56 +1,57 @@
 {
-  "name": "backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev src/index.ts",
-    "dev": "ts-node-dev --respawn src/index.ts",
-    "seed": "ts-node src/seed.ts",
-    "dataTourisme": "ts-node src/dataTourisme/dataTourismev2.ts"
-  },
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@faker-js/faker": "^8.0.2",
-    "@types/bcrypt": "^5.0.0",
-    "@types/cookie-parser": "^1.4.3",
-    "@types/express": "^4.17.17",
-    "@types/geojson": "^7946.0.10",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/uuid": "^9.0.2",
-    "@types/validator": "^13.7.17",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "apollo-server": "^3.12.0",
-    "bcrypt": "^5.1.0",
-    "class-validator": "^0.14.0",
-    "cookie-parser": "^1.4.6",
-    "eslint": "^8.44.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-config-standard-with-typescript": "^22.0.0",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-n": "^15.2.5",
-    "eslint-plugin-promise": "^6.0.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^6.7.1",
-    "jsonwebtoken": "^9.0.0",
-    "nodemon": "^2.0.22",
-    "pg": "^8.10.0",
-    "ts-node-dev": "^2.0.0",
-    "type-graphql": "^1.1.1",
-    "typeorm": "^0.3.12",
-    "typescript": "^4.8.2",
-    "uuid": "^9.0.0",
-    "validator": "^13.9.0"
-  },
-  "dependencies": {
-    "@faker-js/faker": "^8.0.2",
-    "@types/multer": "^1.4.7",
-    "axios": "^1.6.0",
-    "graphql": "^15.8.0",
-    "helmet": "^7.0.0",
-    "multer": "^1.4.5-lts.1",
-    "typeorm-extension": "^3.0.1"
-  }
+	"name": "backend",
+	"version": "1.0.0",
+	"description": "",
+	"main": "index.js",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"start": "ts-node-dev src/index.ts",
+		"dev": "ts-node-dev --respawn src/index.ts",
+		"seed": "ts-node src/seed.ts",
+		"dataTourisme": "ts-node src/dataTourisme/dataTourismev2.ts"
+	},
+	"author": "",
+	"license": "ISC",
+	"devDependencies": {
+		"@faker-js/faker": "^8.0.2",
+		"@types/bcrypt": "^5.0.0",
+		"@types/cookie-parser": "^1.4.3",
+		"@types/express": "^4.17.17",
+		"@types/geojson": "^7946.0.10",
+		"@types/jsonwebtoken": "^9.0.2",
+		"@types/uuid": "^9.0.2",
+		"@types/validator": "^13.7.17",
+		"@typescript-eslint/eslint-plugin": "^5.36.1",
+		"apollo-server": "^3.12.0",
+		"bcrypt": "^5.1.0",
+		"class-validator": "^0.14.0",
+		"cookie-parser": "^1.4.6",
+		"eslint": "^8.44.0",
+		"eslint-config-prettier": "^8.5.0",
+		"eslint-config-standard-with-typescript": "^22.0.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-n": "^15.2.5",
+		"eslint-plugin-promise": "^6.0.1",
+		"express": "^4.18.2",
+		"express-rate-limit": "^6.7.1",
+		"jsonwebtoken": "^9.0.0",
+		"nodemon": "^2.0.22",
+		"pg": "^8.10.0",
+		"ts-node-dev": "^2.0.0",
+		"type-graphql": "^1.1.1",
+		"typeorm": "^0.3.12",
+		"typescript": "^4.8.2",
+		"uuid": "^9.0.0",
+		"validator": "^13.9.0"
+	},
+	"dependencies": {
+		"@faker-js/faker": "^8.0.2",
+		"@types/multer": "^1.4.7",
+		"axios": "^1.6.0",
+		"graphql": "^15.8.0",
+		"helmet": "^7.0.0",
+		"jest": "^29.7.0",
+		"multer": "^1.4.5-lts.1",
+		"typeorm-extension": "^3.0.1"
+	}
 }
